# qtile-config

./: pyproject.toml
qtile_config/: autostart.sh  config.py  install.sh
qtile_config/configs/nitrogen/: bg-saved.cfg  nitrogen.cfg
